<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/lessonEditLL"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/lessonName"
			android:textColor="@color/text"
			android:textSize="20sp"/>
		<EditText
			android:id="@+id/nameET"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:orientation="vertical">
			<Button
				android:layout_height="50sp"
				android:layout_width="match_parent"
				android:text="@string/setStartTime"
				android:onClick="setStartTime"/>
			<Button
				android:layout_height="50sp"
				android:layout_width="match_parent"
				android:text="@string/setEndTime"
				android:onClick="setEndTime"/>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<TextView
				android:id="@+id/startTimeTV"
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:text="@string/none"
				android:textColor="@color/text"
				android:textSize="20sp"/>
			<TextView
				android:id="@+id/endTimeTV"
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:text="@string/none"
				android:textColor="@color/text"
				android:textSize="20sp"/>
		</LinearLayout>
	</LinearLayout>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/save"
		android:onClick="save"/>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/cancel"
		android:onClick="cancel"/>
</LinearLayout>