<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">
	<Button
		android:id="@+id/scheduleB"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/schedule"
		android:onClick="scheduleClick"/>
	<Button
		android:id="@+id/notesB"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/notes"
		android:onClick="notesClick"/>
	<TextView
		android:id="@+id/todayTV"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/todayNotes"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/notesLL"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"/>
	</ScrollView>
</LinearLayout>