<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/headerLL"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel"
			android:onClick="cancel"/>
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:text="@string/save"
			android:onClick="save"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/dateBT"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="10"
			android:onClick="dateClick"/>
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:text="×"
			android:onClick="clearDate"/>
	</LinearLayout>
	<EditText
		android:id="@+id/titleET"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:hint="@string/title"/>
	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent">
		<EditText
			android:id="@+id/noteEditET"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:inputType="textMultiLine"
			android:textSize="15sp"
			android:textColor="@color/text"/>
	</ScrollView>
</LinearLayout>